syntax="proto3";

package passenger_feeback;

service FeedbackManagement {
    rpc AddFeedBack(AddFeedbackRequest) returns  (FeedbackResponse);
    rpc GetByPassengerId(GetByPassengerIdRequest) returns (FeedbackListResponse);
    rpc GetByBookingCode(GetByBookingCodeRequest) returns (FeedbackResponse);
    rpc DeleteByPassengerId(DeleteByPassengerIdRequest) returns(FeedbackResponse);
}

message PassengerFeedback {
    string bookingCode = 1;
    int32 passengerID = 2;
    string feedback = 3;
}

message AddFeedbackRequest{
    PassengerFeedback passengerFeedback = 1;
}

message GetByPassengerIdRequest{
    int32 passengerID = 1;
}

message GetByBookingCodeRequest{
    string bookingCode = 1;
}

message DeleteByPassengerIdRequest{
    int32 passengerID = 1;
}

message FeedbackResponse {
    PassengerFeedback passengerFeedback = 1;
    bool success = 2;
}

message FeedbackListResponse {
    repeated PassengerFeedback feedbackList = 1;
    bool success = 2;
} 
